data/derived/comb/progs/unify/prog4160.ml.out
Characters 48-49:
  let stringOfList f l =  sepConcat l (List.map f l);;
                                                  ^
Error: This expression has type string but an expression was expected of type
         'a list
